--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <!-- Search Bar -->
-<div class="flex justify-start items-center  p-6">
+<div class=" max-w-7xl mx-auto flex justify-start items-center p-6">
   <!-- Location Input -->
   <div class="relative">
     <i class="fa-solid fa-location-dot absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
@@ -31,7 +31,7 @@
 </div>
 
 <!-- Cards Section -->
-<div class="container mx-auto px-30 mt-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
+<div class="  px-30 mt-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
 
   <!-- Card 1 -->
   <div class=" from-blue-100 to-white rounded-3xl shadow-md hover:shadow-xl transition overflow-hidden">
@@ -79,7 +79,7 @@
 
 </div>
 
-<div class="text-center mt-10">
+<div class="text-center mt-10 max-w-7xl mx-auto">
   <div class="flex justify-between items-center">
    <div>
      <h2 class="text-2xl font-semibold text-gray-800">
@@ -148,7 +148,7 @@
 </div>
 
 <!--  -->
-<div class="mt-12 px-8">
+<div class=" max-w-7xl mx-auto mt-12 px-8">
   <h2 class="text-2xl font-semibold text-gray-800 ">
     Book an appointment for an in-clinic consultation
   </h2>
@@ -231,7 +231,7 @@
 </div>
 
 
-<div class="mt-12 px-8 flex flex-col lg:flex-row justify-between gap-16 border-t border-b border-gray-200 p-10 mb-20">
+<div class=" max-w-7xl mx-auto mt-12 px-8 flex flex-col lg:flex-row justify-between gap-16 border-t border-b border-gray-200 p-10 mb-20">
   
   <!-- Left Section -->
   <div class="lg:w-1/3">
@@ -281,7 +281,7 @@
 
 
 
-<div class="mt-16 px-8 py-12 ">
+<div class=" max-w-7xl mx-auto mt-16 px-8 py-12 ">
   <h3 class="text-2xl font-semibold text-gray-800 text-center mb-10">
     What our users have to say
   </h3>
